<resources>
    <string name="app_name">Hotel</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_room">Phòng</string>
    <string name="nav_service">Dịch vụ</string>
    <string name="nav_news">Tin tức</string>
    <string name="nav_more">Nhiều hơn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_room_detail">RoomDetail</string>
    <string name="more_intoduce">Giới thiệu</string>
    <string name="more_contact">Liên hệ</string>
</resources>
